--- a/src/content/1 intro.mdx
+++ b/src/content/1 intro.mdx
@@ -2,8 +2,12 @@
 title: Intro
 ---
 
-# Welcome to Falcone
+Welcome to Falcone, your educational resource that will guide you in your onboarding to options and the Carmine Finance. 
 
-Our goal is to simplify complex trading concepts and guide you through the essential steps needed to make informed decisions.
+Options offer you the opportunity to make strategic investments based on the movement of various assets. By trading options, you can profit from both rising and falling markets, enhancing your investment strategies. However, you can also lose money, if the markets move in the opposite direction.
 
-From understanding market dynamics to risk management techniques, we've got you covered. Embark on your path to becoming a knowledgeable and empowered trader and start learning and trading with peace of mind.
+An option confers the right, but not the obligation, to buy (“call”) or sell (“put”) something at a specific time ("expiration") and price ("strike").
+
+So, for example, a call option, which is effectively a bet between two parties, starts with someone making a bet: an option can only come into existence if someone sells it, which is usually called writing an option.
+
+In the specific case of Carmine, we are using European style options. This means that we are dealing with an options contract that limits rights exercise to only the day of expiration. This is in opposition to what is called American style options, that can be exercised at any time until the day of expiration.
