--- a/src/content/2 buying.mdx
+++ b/src/content/2 buying.mdx
@@ -2,25 +2,24 @@
 title: Buying
 ---
 
-## General Understanding
+## Intro
+### Buying (Long)
 There are some important concepts for you to consider when buying options:
 
-### Limited Risk
+#### Limited Risk
 
 When you buy options, your risk is limited to the premium paid. This means you can define your maximum potential loss upfront, providing you with a level of control over your investments. As a buyer of options, your potential loss is limited to the premium paid.
 
-### Time Sensitivity
+#### Time Sensitivity
 
 Options have expiration dates, and *their value diminishes as time passes*. If the underlying asset doesn't move in the anticipated direction within the specified timeframe, the option may expire worthless.
 
 ## Calls
+### Buying a Call (Long Call)
 
 Calls are typically used when you anticipate an asset will appreciate, allowing you to profit from the price difference. A good mental model to understand it is that of placing a bet that the price of the asset will rise. By purchasing a call option, you can potentially profit from the upward movement of the asset's price, without actually owning the asset itself.
 
 ## Puts
+### Buying a Put
 
 Puts are valuable when you expect the price of the asset to decline. A good intuition to understand it is that of a bet that the price of the asset will fall. By acquiring a put option, you can protect yourself from potential losses or even potentially profit from the downward movement of the asset's price, serving as a form of insurance or a speculative tool.
-
-## Risks and Profits
-
-About risks and profits
