add examples comp

--- a/src/content/2 buying.mdx
+++ b/src/content/2 buying.mdx
@@ -37,6 +37,36 @@ Calls are typically used when you anticipate an asset will appreciate, allowing 
   </ConceptsBox>
 </ConceptsBoxWrapper>
 
+###### Example
+
+You believe that the price of Ethereum, currently trading at $2,800, will increase in the near future, so you go Long on a Call.
+
+You decide to buy a call option on Ethereum with a strike price of $3,000 and an expiration date of one month. The premium for the call option is $100.
+
+<ConceptsExampleWrapper>
+    <ConceptsExample 
+        type="In-the-money" 
+        header="Price of ethereum goes up to $3500" >
+        You can exercise the Call option and buy the stock at the lower strike price, potentially making a profit.
+
+        - Current Price: $3500
+        - Strike Price: $3,000
+        - Premium paid: $100
+
+        **Total Profit: $400 ($3,500 - $3,000 - $100)**
+    </ConceptsExample>
+    <ConceptsExample
+        type="Out-of-the-money"
+        header="Price of ethereum stays below $3000">
+        You have no interest in exercising the Call option, since you can buy the asset at a lower price in the open market.
+        Premium paid: $100
+
+        **Total Loss: $100**
+
+</ConceptsExample>
+
+</ConceptsExampleWrapper>
+
 ## Puts
 
 ### Buying a Put
