use subpages, update content

--- a/src/content/1 intro.mdx
+++ b/src/content/1 intro.mdx
@@ -1,5 +1,6 @@
 ---
 title: Intro
+section: Intro
 ---
 
 Welcome to Falcone, your educational resource that will guide you in your onboarding to options and the Carmine Finance. 
