--- a/src/content/2.1 buying-call.mdx
+++ b/src/content/2.1 buying-call.mdx
@@ -49,5 +49,8 @@ You decide to buy a call option on Ethereum with a strike price of $3,000 and an
         Premium paid: $100
 
         **Total Loss: $100**
+
   </ConceptsExample>
 </ConceptsExampleWrapper>
+
+<ScenarioGraph optionType="long call" />
