--- a/src/content/2.2 buying-put.mdx
+++ b/src/content/2.2 buying-put.mdx
@@ -52,4 +52,4 @@ You decide to buy a put option on Ethereum with a strike price of $2,700 and an 
   </ConceptsExample>
 </ConceptsExampleWrapper>
 
-<ScenarioGraph optionType="long put" />
+<PageAssessment option={{ side: "long", type: "put" }} />
