--- a/src/content/3 selling.mdx
+++ b/src/content/3 selling.mdx
@@ -1,44 +1,29 @@
 ---
-title: Selling
+title: Intro
 section: Selling
 ---
 
 ## Intro
+### Buying 
 
-### Unlimited Risk
+Now that we've understood what buying options entails, it's now time to look to the other side of the bet. For you to buy an option, it necessary means that a counterpart is assuming the opposite side of the trade.
+
+There are many situations or strategies that might benefit from selling options. They are an important tool for risk management to hedge long positions. Furthermore, they allow individuals to generate income in the form of premiums. When you sell a call option, you receive the premium paid by the option buyer. This premium becomes your profit if the option expires worthless or if the underlying asset's price remains below the strike price. This might be useful in a neutral or bearish outlook for an asset, as a way to profit from the lack of significant price movement or even a downward price trend.
+
+Some useful concepts that are important to understand when your consider selling options:
+
+#### Unlimited Risk
 
 As the seller of a option, you expose yourself to unlimited risk. If the price of the underlying asset moves significantly, the option buyer may exercise their right to buy the asset from you (call) or sell the asset to you (put) at the predetermined strike price. This means you would need to fulfil your obligation, resulting in potential losses.
 
-### Limited Premium Received
+#### Limited Premium Received
 
 As the seller, you receive a premium from the buyer when you sell a call option. This premium is yours to keep, regardless of whether the option is exercised or expires worthless. The maximum profit you can achieve is the premium received when selling the call option.
 
-### Collateral
+#### Collateral
 
 Selling options require maintaining a certain level of margin or collateral. This acts as a safety net to cover potential losses and fulfill obligations associated with the options contracts. Margin requirements are calculated based on a variety of factors, including the specific option contract, the strike price and the underlying asset's volatility. If the value of the options sold moves against you, it may impact your margin utilization. If the margin falls below the requirement, you may be required to deposit additional funds or close the position.
 
-### Price Volatility
+#### Price Volatility
 
 Options are influenced by the volatility of the underlying asset. Sudden price swings can impact the value of options, potentially resulting in losses if the market doesn't move in your favor and your position gets liquidated before reaching the expiration date. It's essential to actively monitor your sold options and be prepared to adjust your positions if market conditions change.
-
-## Call
-
-When you sell a call option, you take on the obligation to sell the underlying asset to the option buyer at the strike price if they choose to exercise their right. You expose yourself to unlimited upside risk. If the price of the underlying asset rises significantly, the option buyer may exercise their right to buy the asset from you, meaning you would need to deliver the asset even if its market price is much higher.
-
-## Puts
-
-When you sell a put option, you take on the obligation to buy the underlying asset from the option buyer at the strike price if they choose to exercise their right. You expose yourself to downside risk. If the price of the underlying asset decreases significantly, you still would need to purchase the asset at the strike price, even if its market value is lower.
-
-*Copy specific to the example*
-
----
-
-## Slippage
-
-Slippage refers to the difference between the expected price of a trade and the actual executed price. It is a common phenomenon in decentralized exchanges and automated market makers (AMM), like Carmine.
-
-There are three main factors that contribute to slippage when interacting with an AMM:
-
-**Liquidity:** *Liquidity refers to the depth of the market and the availability of buy and sell orders for a particular asset.* Higher liquidity typically leads to lower slippage, as there are more assets available to trade at close the expected price. Conversely, low liquidity can result in higher slippage, as the market may not have sufficient depth to fulfill large orders without impacting the price significantly.
-
-**Volatility:** Volatility refers to the rapid and significant price fluctuations of an asset. Higher volatility can increase the likelihood of slippage because prices can move quickly between the time a trade is initiated and executed, resulting in slippage.
