render options inside MDX component

--- a/src/content/2.1 buying-call.mdx
+++ b/src/content/2.1 buying-call.mdx
@@ -51,3 +51,4 @@ You decide to buy a call option on Ethereum with a strike price of $3,000 and an
         **Total Loss: $100**
   </ConceptsExample>
 </ConceptsExampleWrapper>
+<PageOptions option={{ side: "long", type: "call" }} />
