fix buying put option type

--- a/src/content/2.2 buying-put.mdx
+++ b/src/content/2.2 buying-put.mdx
@@ -51,5 +51,5 @@ You decide to buy a put option on Ethereum with a strike price of $2,700 and an 
 
   </ConceptsExample>
 </ConceptsExampleWrapper>
-<PageOptions option={{ side: "long", type: "short" }} />
+<PageOptions option={{ side: "long", type: "put" }} />
 
