--- a/src/content/2.1 buying-call.mdx
+++ b/src/content/2.1 buying-call.mdx
@@ -12,8 +12,8 @@ Calls are typically used when you anticipate an asset will appreciate, allowing 
 <ConceptsBoxWrapper>
   <ConceptsBox title="Profit" color="green">
     If the price of Ethereum exceeds the strike price, you can exercise the call
-    option and buy Ethereum at the strike price. You may then immediately sell
-    it in the free market at the higher market price. Your profit would be the
+    option and buy Ethereum at the strike price. <a href='/liquidity-pools'>You may then immediately sell
+    it in the free market at the higher market price.</a> Your profit would be the
     difference between the market price and the strike price, minus the premium
     paid for the call option.
   </ConceptsBox>
