--- a/src/content/2.2 buying-put.mdx
+++ b/src/content/2.2 buying-put.mdx
@@ -12,8 +12,8 @@ Puts are valuable when you expect the price of the asset to decline. A good intu
 <ConceptsBoxWrapper>
   <ConceptsBox title="Profit" color="green">
     If the market price of Ethereum is below the strike price, you can exercise
-    the put option. By exercising the option, you can buy Ethereum in the market
-    at the lower price and sell it at the higher strike price. The profit is
+    the put option. <a href='/liquidity-pools'>By exercising the option, you can buy Ethereum in the market
+    at the lower price and sell it at the higher strike price.</a> The profit is
     calculated as the difference between the strike price and the market price,
     minus the premium paid for the put option.
   </ConceptsBox>
