--- a/src/content/4 slippage.mdx
+++ b/src/content/4 slippage.mdx
@@ -15,6 +15,6 @@ _Liquidity refers to the depth of the market and the availability of buy and sel
 
 #### Volatility
 
-Volatility refers to the rapid and significant price fluctuations of an asset. Higher volatility can increase the likelihood of slippage because prices can move quickly between the time a trade is initiated and executed, resulting in slippage.
+Volatility is the degree of variation of a trading price series over time. Higher volatility refers to the rapid and significant price fluctuations of an asset, which can increase the likelihood of slippage because prices can move quickly between the time a trade is initiated and executed.
 
 To make sure that the user does not receive bad (worse than expected) price, Carmine uses a slippage parameter that protects the user. The user will provide a price that he/she is willing to trade at and maximum deviation from that price (slippage). If the final price is outside of this deviation then the trade does not happen.
