--- a/src/content/5 liquidity-pools.mdx
+++ b/src/content/5 liquidity-pools.mdx
@@ -17,24 +17,33 @@ You can enter and exit the pools instantly at any time as long there's enough av
 
 Let's give a concrete example of what actually happens when you trade at Carmine:
 
-#### User buys call option
-
+<LiquidityPoolExample title='User buys call option'>
 A user buys 1 Call options on ETH/USDC with strike 3500 USDC and current price 3000 USDC with option premia 30 USDC with maturity in 1 month.
 
 At the start the user pays to the pool equivalent to 1 \* 30 USDC in ETH, which is 30/3000 ETH = 0.01 ETH for the call options. The pool locks in 1 ETH.
 
 At maturity there are two possibilities:
 
-- Current price is above the strike, let's say 3700 USDC. The options is exercised in the money. The user get equivalent to 1 \* (3700 - 3500) USDC = 200 USDC in ETH, which is 200/3700 ~ 0.054 ETH. The rest of the locked capital 1-0.054 = 0.946 is returned back to the pool. The user profited 0.054 ETH from the option.
-- Current price is below the strike, lets say 3300 USDC. The current price is not above strike price so the buyer gets nothing and all the locked capital is returned to the pool.
+<ScenarioCard>
+Current price is above the strike, let's say 3700 USDC. The options is exercised in the money. The user get equivalent to 1 \* (3700 - 3500) USDC = 200 USDC in ETH, which is 200/3700 ~ 0.054 ETH. The rest of the locked capital 1-0.054 = 0.946 is returned back to the pool. The user profited 0.054 ETH from the option.
+</ScenarioCard>
+or
+<ScenarioCard>
+Current price is below the strike, lets say 3300 USDC. The current price is not above strike price so the buyer gets nothing and all the locked capital is returned to the pool.
+</ScenarioCard>
+</LiquidityPoolExample>
 
-#### User sells put option
-
+<LiquidityPoolExample title='User sells put option'>
 User sells 1 Put option on ETH/USDC with strike price 2600 USDC and current price is 3000 USDC with option premia 40 USDC with maturity in 1 month.
 
 At the start the user receives 1 \* 40 USDC = 40 USDC as premia from the pool and locks in 2600 USDC.
 
 At maturity there are two possibilities:
-
-- Current price is above the strike, lets say 2800 USDC. Which means that the buyer (pool) does not receive anything and the seller (the user) get back its locked capital of 1 ETH.
-- Current price is below the strike, lets say 2500 USDC. The option is exercised in the money so the the buyer (pool) receives 1 \* (2600 - 2500) USDC = 100 USDC and the seller (user) gets its locked capital without the 100 USDC back, for a total value of 2500 USDC. The user lost 100 USDC from the option.
+<ScenarioCard>
+Current price is above the strike, lets say 2800 USDC. Which means that the buyer (pool) does not receive anything and the seller (the user) get back its locked capital of 1 ETH.
+</ScenarioCard>
+or
+<ScenarioCard>
+Current price is below the strike, lets say 2500 USDC. The option is exercised in the money so the the buyer (pool) receives 1 \* (2600 - 2500) USDC = 100 USDC and the seller (user) gets its locked capital without the 100 USDC back, for a total value of 2500 USDC. The user lost 100 USDC from the option.
+</ScenarioCard>
+</LiquidityPoolExample>
