--- a/src/content/1 intro.mdx
+++ b/src/content/1 intro.mdx
@@ -9,6 +9,6 @@ Options offer you the opportunity to make strategic investments based on the mov
 
 An option confers the right, but not the obligation, to buy (“call”) or sell (“put”) something at a specific time ("expiration") and price ("strike").
 
-So, for example, a call option, which is effectively a bet between two parties, starts with someone making a bet: an option can only come into existence if someone sells it, which is usually called writing an option.
+So, for example, a call option, which is effectively an agreement between two parties, starts with someone making an offer: an option can only come into existence if someone sells it, which is usually called writing an option.
 
 In the specific case of Carmine, we are using European style options. This means that we are dealing with an options contract that limits rights exercise to only the day of expiration. This is in opposition to what is called American style options, that can be exercised at any time until the day of expiration.
