--- a/src/content/2.1 buying-call.mdx
+++ b/src/content/2.1 buying-call.mdx
@@ -7,7 +7,7 @@ section: Buying
 
 ### Buying a Call (Long Call)
 
-Calls are typically used when you anticipate an asset will appreciate, allowing you to profit from the price difference. A good mental model to understand it is that of placing a bet that the price of the asset will rise. By purchasing a call option, you can potentially profit from the upward movement of the asset's price, without actually owning the asset itself.
+Calls are typically used when you anticipate an asset will appreciate, allowing you to profit from the price difference. A good mental model to understand it is believing that the price of the asset will rise. By purchasing a call option, you can potentially profit from the upward movement of the asset's price, without actually owning the asset itself.
 
 <ConceptsBoxWrapper>
   <ConceptsBox title="Profit" color="green">
@@ -15,10 +15,11 @@ Calls are typically used when you anticipate an asset will appreciate, allowing 
     option and buy Ethereum at the strike price. <a href='/liquidity-pools'>You may then immediately sell
     it in the free market at the higher market price.</a> Your profit would be the
     difference between the market price and the strike price, minus the premium
-    paid for the call option.
+    paid for the call option.<br />
+    This could happen for you on the background, for example that is the case for Carmine.
   </ConceptsBox>
   <ConceptsBox title="Loss" color="red">
-    If the price of Ethereum does not rise above the strike price before the
+    If the price of Ethereum does not rise above the strike price at the
     option's expiration, the call option may expire worthless, resulting in a
     loss limited to the premium paid for the option.
   </ConceptsBox>
