--- a/src/content/2.2 buying-put.mdx
+++ b/src/content/2.2 buying-put.mdx
@@ -7,7 +7,7 @@ section: Buying
 
 ### Buying a Put
 
-Puts are valuable when you expect the price of the asset to decline. A good intuition to understand it is that of a bet that the price of the asset will fall. By acquiring a put option, you can protect yourself from potential losses or even potentially profit from the downward movement of the asset's price, serving as a form of insurance or a speculative tool.
+Puts are valuable when you expect the price of the asset to decline. A good intuition to understand it is believing that the price of the asset will fall. By acquiring a put option, you can protect yourself from potential losses or even potentially profit from the downward movement of the asset's price, serving as a form of insurance or a speculative tool.
 
 <ConceptsBoxWrapper>
   <ConceptsBox title="Profit" color="green">
@@ -15,7 +15,8 @@ Puts are valuable when you expect the price of the asset to decline. A good intu
     the put option. <a href='/liquidity-pools'>By exercising the option, you can buy Ethereum in the market
     at the lower price and sell it at the higher strike price.</a> The profit is
     calculated as the difference between the strike price and the market price,
-    minus the premium paid for the put option.
+    minus the premium paid for the put option. <br />
+    This could happen for you on the background, for example that is the case for Carmine.
   </ConceptsBox>
   <ConceptsBox title="Loss" color="red">
     If the price of Ethereum remains above the strike price, the put option may
