--- a/src/content/3 selling.mdx
+++ b/src/content/3 selling.mdx
@@ -6,7 +6,7 @@ section: Selling
 ## Intro
 ### Buying 
 
-Now that we've understood what buying options entails, it's now time to look to the other side of the bet. For you to buy an option, it necessary means that a counterpart is assuming the opposite side of the trade.
+Now that we've understood what buying options entails, it's now time to look to the other side of the deal. For you to buy an option, it necessarily means that a counterpart is assuming the opposite side of the trade.
 
 There are many situations or strategies that might benefit from selling options. They are an important tool for risk management to hedge long positions. Furthermore, they allow individuals to generate income in the form of premiums. When you sell a call option, you receive the premium paid by the option buyer. This premium becomes your profit if the option expires worthless or if the underlying asset's price remains below the strike price. This might be useful in a neutral or bearish outlook for an asset, as a way to profit from the lack of significant price movement or even a downward price trend.
 
