--- a/src/content/3.1 selling-call.mdx
+++ b/src/content/3.1 selling-call.mdx
@@ -13,10 +13,10 @@ When you sell a call option, you take on the obligation to sell the underlying a
   <ConceptsBox title="Profit" color="green">
     If the price of Ethereum remains below the strike price, the option will
     expire worthless (out of the money). You get to keep the premium received
-    upfront, which becomes your profit.
+    upfront, which becomes your profit, and not pay anything to the buyer.
   </ConceptsBox>
   <ConceptsBox title="Loss" color="red">
-    If the price of Ethereum rises above the strike price before the option's
+    If the price of Ethereum rises above the strike price at the option's
     expiration, the buyer may exercise the option, resulting in a loss
     proportional to the price increase.
   </ConceptsBox>
