--- a/src/content/3.2 selling-put.mdx
+++ b/src/content/3.2 selling-put.mdx
@@ -13,10 +13,10 @@ When you sell a put option, you take on the obligation to buy the underlying ass
   <ConceptsBox title="Profit" color="green">
     If the price of Ethereum remains above the strike price, the option will
     expire worthless (out of the money). You get to keep the premium received
-    upfront, which becomes your profit.
+    upfront, which becomes your profit, and not pay anything to the buyer
   </ConceptsBox>
   <ConceptsBox title="Loss" color="red">
-    If the price of Ethereum drops below the strike price before the option's
+    If the price of Ethereum drops below the strike price at the option's
     expiration, the buyer may exercise the option, resulting in a loss
     proportional to the price decrease.
   </ConceptsBox>
